use css:overflow property to solve the problem of floated elements

--- a/css/main.css
+++ b/css/main.css
@@ -288,9 +288,13 @@ blockquote p {
     /*background: lightgreen;*/
 }
 
-/* styles for floated layout */
-.page-nav:after {
-	content: '';
-	display: table;
-	clear: both;
+.clearfix {
+    overflow: auto;
 }
+
+/* styles for floated layout */
+/*.page-nav:after {
+    content: '';
+    display: table;
+    clear: both;
+}*/
